--- a/MapsUIkit/Base.lproj/Main.storyboard
+++ b/MapsUIkit/Base.lproj/Main.storyboard
@@ -19,13 +19,24 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="r6a-Go-4eC">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Ek-nn-tx7">
+                                <rect key="frame" x="179" y="792" width="56" height="40"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="draw"/>
+                                <connections>
+                                    <action selector="draw:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ez5-YV-Mno"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Ek-nn-tx7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="748" id="9Sf-nE-wGg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6Ek-nn-tx7" secondAttribute="bottom" constant="30" id="CGT-xA-WZl"/>
                             <constraint firstItem="r6a-Go-4eC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JG7-KC-ZYO"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="r6a-Go-4eC" secondAttribute="trailing" id="nLp-It-iFc"/>
                             <constraint firstItem="r6a-Go-4eC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="pin-z0-mse"/>
+                            <constraint firstItem="6Ek-nn-tx7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="x95-Vt-Dct"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="r6a-Go-4eC" secondAttribute="bottom" id="xSG-p5-YBx"/>
                         </constraints>
                     </view>
@@ -35,7 +46,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="94"/>
+            <point key="canvasLocation" x="18.840579710144929" y="93.75"/>
         </scene>
     </scenes>
     <resources>
